created a background, fixed some tools and deleted other

--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="hero">
       <h1>All-in-one developer toolbox</h1>
-      <p>Fast, privacy-friendly utilities. Black + soft blue theme. No tracking.</p>
+      <p>Brought to you by  <a href="https://discord.gg/RfKQNEPheJ">Aery</a></p>
     </div>
 
     <div class="section">
@@ -90,7 +90,6 @@
         <a class="card" href="/tools/file-metadata.html" data-tags="file metadata"><div class="badge">FILE</div><div class="title">File Metadata</div><div class="desc">Name/Type/SHA-256</div></a>
         <a class="card" href="/tools/exif.html" data-tags="exif image metadata"><div class="badge">EXIF</div><div class="title">Image Metadata (EXIF)</div><div class="desc">JPEG/TIFF</div></a>
         <a class="card" href="/tools/pdf-viewer.html" data-tags="pdf viewer"><div class="badge">PDF</div><div class="title">PDF Viewer</div><div class="desc">In-browser</div></a>
-        <a class="card" href="/tools/pdf-text.html" data-tags="pdf text extract"><div class="badge">PDF</div><div class="title">PDF → Text</div><div class="desc">pdf.js</div></a>
         <a class="card" href="/tools/pptx-viewer.html" data-tags="pptx viewer"><div class="badge">PPTX</div><div class="title">PPTX Viewer</div><div class="desc">Slides text</div></a>
         <a class="card" href="/tools/markdown-pdf.html" data-tags="markdown pdf"><div class="badge">MD</div><div class="title">Markdown → PDF</div><div class="desc">jsPDF</div></a>
       </div>
@@ -100,7 +99,6 @@
       <h2>Audio</h2>
       <div class="grid">
         <a class="card" href="/tools/tts.html" data-tags="tts speech"><div class="badge">TTS</div><div class="title">Text → Speech</div><div class="desc">Browser voices</div></a>
-        <a class="card" href="/tools/stt.html" data-tags="stt speech"><div class="badge">STT</div><div class="title">Speech → Text</div><div class="desc">Web Speech API</div></a>
       </div>
     </div>
 
@@ -121,6 +119,6 @@
     </div>
   </div>
   <div class="toast"></div>
-  <script src="/app.js"></script>
+  <script src="/app.js?v=bg2"></script>
 </body>
 </html>
