--- a/web/tools/password.html
+++ b/web/tools/password.html
@@ -25,16 +25,13 @@
           min="6"
           max="128"
           style="max-width: 120px"
-        /><label class="small">
-          <input type="checkbox" id="lower" checked /> a-z</label
-        >
-        <label class="small"
-          ><input type="checkbox" id="upper" checked /> A-Z</label
-        >
-        <label class="small"
-          ><input type="checkbox" id="digits" checked /> 0-9</label
-        >
-        <label class="small"><input type="checkbox" id="symbols" /> !@#$</label>
+        />
+        <div class="small flags-row">
+          <label class="flag-pill"><input type="checkbox" id="lower" checked /><span>Include lowercase (a–z)</span></label>
+          <label class="flag-pill"><input type="checkbox" id="upper" checked /><span>Include uppercase (A–Z)</span></label>
+          <label class="flag-pill"><input type="checkbox" id="digits" checked /><span>Include numbers (0–9)</span></label>
+          <label class="flag-pill"><input type="checkbox" id="symbols" /><span>Include symbols (!@#$…)</span></label>
+        </div>
         <button class="btn" id="gen">Generate</button>
       </div>
       <div class="field" style="margin-top: 12px">
