--- a/web/tools/regex.html
+++ b/web/tools/regex.html
@@ -16,12 +16,13 @@
         <div class="field">
           <div class="label">Pattern</div>
           <input id="pat" class="input" placeholder="e.g. (foo)bar" />
-          <div class="small">
-            Flags: <label><input type="checkbox" id="f-i" /> i</label>
-            <label><input type="checkbox" id="f-g" /> g</label>
-            <label><input type="checkbox" id="f-m" /> m</label>
-            <label><input type="checkbox" id="f-s" /> s</label>
-            <label><input type="checkbox" id="f-u" /> u</label>
+          <div class="small flags-row">
+            Flags:
+            <label class="flag-pill"><input type="checkbox" id="f-i" /><span>i</span></label>
+            <label class="flag-pill"><input type="checkbox" id="f-g" /><span>g</span></label>
+            <label class="flag-pill"><input type="checkbox" id="f-m" /><span>m</span></label>
+            <label class="flag-pill"><input type="checkbox" id="f-s" /><span>s</span></label>
+            <label class="flag-pill"><input type="checkbox" id="f-u" /><span>u</span></label>
           </div>
           <div class="field">
             <div class="label">Test String</div>
