--- a/web/tools/word-counter.html
+++ b/web/tools/word-counter.html
@@ -16,7 +16,7 @@
         <div class="label">Text</div>
         <textarea id="txt" class="code"></textarea>
       </div>
-      <div class="kv">
+      <div class="kv nooon">
         <div>Characters</div>
         <div id="c"></div>
         <div>Characters (no spaces)</div>
