--- a/web/tools/exif.html
+++ b/web/tools/exif.html
@@ -13,11 +13,16 @@
       </div>
       <h1>Image Metadata (EXIF) Viewer</h1>
       <div class="field">
+        <div class="label">Choose an image</div>
+        <div class="row">
+          <label for="file" class="btn primary">Browse image</label>
+          <span id="fileName" class="small">No file selected</span>
+        </div>
         <input
           id="file"
-          class="input"
           type="file"
           accept="image/jpeg,image/tiff,image/png"
+          style="display: none"
         />
       </div>
       <div class="two">
@@ -167,9 +172,12 @@
         }
         return {};
       }
-      document.getElementById("file").onchange = async (e) => {
+      const fileInput = document.getElementById("file");
+      const fileNameEl = document.getElementById("fileName");
+      fileInput.onchange = async (e) => {
         const f = e.target.files[0];
         if (!f) return;
+        if (fileNameEl) fileNameEl.textContent = f.name;
         const url = URL.createObjectURL(f);
         $("#img").src = url;
         $("#msg").textContent = "";
