--- a/web/tools/image-to-base64.html
+++ b/web/tools/image-to-base64.html
@@ -12,8 +12,13 @@
         <a class="brand" href="/"><span class="dot"></span> DevTools</a>
       </div>
       <h1>Image → Base64</h1>
-      <div class="field">
-        <input id="file" class="input" type="file" accept="image/*" />
+      <div class="field file-picker">
+        <div class="label">Choose image</div>
+        <div class="row">
+          <label for="file" class="btn primary">Browse image…</label>
+          <span id="fileName" class="small">No file selected</span>
+        </div>
+        <input id="file" type="file" accept="image/*" style="display: none" />
       </div>
       <div class="two">
         <div class="field">
@@ -39,9 +44,15 @@
     <div class="toast"></div>
     <script src="/app.js"></script>
     <script>
-      $("#file").onchange = (e) => {
+      const fileInput = $("#file");
+      const fileNameEl = $("#fileName");
+      fileInput.onchange = (e) => {
         const f = e.target.files[0];
-        if (!f) return;
+        if (!f) {
+          if (fileNameEl) fileNameEl.textContent = "No file selected";
+          return;
+        }
+        if (fileNameEl) fileNameEl.textContent = f.name;
         const r = new FileReader();
         r.onload = () => {
           $("#img").src = r.result;
