--- a/web/tools/tts.html
+++ b/web/tools/tts.html
@@ -47,7 +47,8 @@
           </div>
           <div class="row">
             <button class="btn" id="speak">Speak</button
-            ><button class="btn ghost" id="stop">Stop</button>
+            ><button class="btn ghost" id="stop">Stop</button
+            ><button class="btn" id="download">Download</button>
           </div>
         </div>
       </div>
@@ -80,6 +81,45 @@
         speechSynthesis.speak(u);
       };
       $("#stop").onclick = () => speechSynthesis.cancel();
+
+      $("#download").onclick = async () => {
+        const text = $("#txt").value || "";
+        if (!text.trim()) {
+          toast("Type something first");
+          return;
+        }
+        const i = Number($("#voice").value) || 0;
+        const v = voices[i] || null;
+        const payload = {
+          text,
+          voiceName: v ? v.name : "",
+          voiceLang: v ? v.lang : "",
+          rate: Number($("#rate").value) || 1,
+          pitch: Number($("#pitch").value) || 1,
+        };
+        try {
+          const res = await fetch("/api/tts", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(payload),
+          });
+          if (!res.ok) {
+            toast("TTS download failed");
+            return;
+          }
+          const blob = await res.blob();
+          const url = URL.createObjectURL(blob);
+          const a = document.createElement("a");
+          a.href = url;
+          a.download = "speech";
+          document.body.appendChild(a);
+          a.click();
+          document.body.removeChild(a);
+          setTimeout(() => URL.revokeObjectURL(url), 5000);
+        } catch (e) {
+          toast("Error while generating audio");
+        }
+      };
     </script>
   </body>
 </html>
